# mixed_and_augmented_reality

./: README.md
interactive_face_augmentation/: Readme.md  interactive_face_augmentation.py
interactive_face_augmentation/bkups/: interactive_face_augmentation.bkup1.py  interactive_face_augmentation.bkup2.py  interactive_face_augmentation.bkup3.py
interactive_face_augmentation/hw3_solution_python_dana_nguyen/: ARChatTest1.mov  ARChatTest2.mov  OpenGL_CV.py  README.txt  intrinsic-calib-suriya.txt
interactive_face_augmentation/hw3_solution_python_dana_nguyen/checkerboardFromVideo/: int_cal_checkerboardFromVideo.txt
opencv_opengl/: OpenGL_CV.py  PyOpenGL_accelerate-3.1.5-cp37-cp37m-win32.whl  README.txt  calibration_matrix.yaml  camera_calib.py  checkerboard.avi  opengl_cv_skeleton.py  output1.txt
opencv_opengl/Solutions/hw3_solution_cpp/: README.txt
opencv_opengl/Solutions/hw3_solution_cpp_2/: CMakeLists.txt  Makefile  README.txt  assignment1.cpp  cameraHelper.cpp  cameraHelper.h  cmake_install.cmake  filelist_example.txt
opencv_opengl/backups/: OpenGL_CV.bkup.py  calibration_matrix.yaml  camera_calib.bkup.py
realtime_face_relighting/: Feedback.txt  mediapipe_apis.py  mediapipe_facedetection.py  mediapipe_facemesh.py  open3D_apis.py  pipelines.txt  proj4_solution.py  pygame_cube.py  readme.txt  realtimeFaceRelighting.py
realtime_face_relighting/bkups/: realtmeFaceRelighting_RANDOM_QUADS.py  realtmeFaceRelighting_SPHERES.py
realtime_face_relighting/point_cloud_data/: face_point_cloud.txt  face_point_cloud_v2.ply
(+50 files in other folders)
