PROJECT( assignment1 )
FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE( OpenGL )
FIND_PACKAGE( GLUT )
SET(MySources assignment1.cpp cameraHelper.cpp )
ADD_EXECUTABLE( assignment1 ${MySources} )
TARGET_LINK_LIBRARIES( assignment1 ${OpenCV_LIBS} ${GLUT_LIBRARY} ${OPENGL_LIBRARY})
SET_SOURCE_FILES_PROPERTIES(${MySources} PROPERTIES LANGUAGE CXX )
